--- a/packages/extract-iam/package.json
+++ b/packages/extract-iam/package.json
@@ -11,5 +11,8 @@
     "camelcase": "^5.3.1",
     "commander": "^4.1.0",
     "json-to-pretty-yaml": "^1.2.2"
+  },
+  "engines": {
+    "node": ">= 12.0"
   }
 }
